@@ -14,6 +14,8 @@ Post v23.06.0
     Existing sessions might get re-hashed to a different ECMP path when
     OVN detects the algorithm support in the datapath during an upgrade
     or restart of ovn-controller.
+  - Introduce support for binding remote ports in ovn-northd if the CMS sets
+    requested-chassis option for a remote logical switch port.
 
 OVN v23.06.0 - 01 Jun 2023
 --------------------------
